[package]
name = "gridbugs-roguelike-tutorial-2022"
version = "0.1.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
edition = "2021"

[dependencies.gridbugs]
version = "0.5"
features = [
    "chargrid",
    "chargrid_wgpu",
    "chargrid_ansi_terminal",
    "coord_2d",
    "direction",
    "entity_table",
    "spatial_table",
    "rgb_int",
    "rgb_int_rand",
    "visible_area_detection",
    "grid_2d",
    "perlin2",
    "entity_table_realtime",
]

[dependencies]
meap = "0.5"
rand = "0.8"
rand_isaac = "0.3"
